--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -17,11 +17,16 @@ body {
   font-size: 22px;
 }
 
-.confirm {
+.para.small-para {
+  font-size: 14px;
+}
+
+#confirm-button {
   background: green;
   color: white;
   font-weight: bold;
 } 
+
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -29,7 +34,7 @@ body {
   font-size: 20px;
 }
 
-.child {
+.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
